--- a/code/project_colab.ipynb
+++ b/code/project_colab.ipynb
@@ -303,9 +303,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class Net(nn.Module):\n",
+        "class GRU(nn.Module):\n",
         "    def __init__(self):\n",
-        "        super(Net, self).__init__()\n",
+        "        super(GRU, self).__init__()\n",
         "        self.conv1 = nn.Conv1d(300, 16, kernel_size=3, padding=1) \n",
         "        self.pool1 = nn.MaxPool1d(2)  \n",
         "        self.gru = nn.GRU(16, 64, num_layers=2, bidirectional=True) \n",
@@ -327,6 +327,32 @@
         "        print(x.shape)\n",
         "        x = self.fc2(x)\n",
         "        print(x.shape)\n",
+        "        return x\n",
+        "    \n",
+        "class LSTM(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(LSTM, self).__init__()\n",
+        "        self.conv1 = nn.Conv1d(300, 16, kernel_size=3, padding=1) \n",
+        "        self.pool1 = nn.MaxPool1d(2)  \n",
+        "        self.lstm = nn.LSTM(16, 64, num_layers=2, bidirectional=True) \n",
+        "        self.fc1 = nn.Linear(256, 128) \n",
+        "        self.fc2 = nn.Linear(128, 2)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.conv1(x)\n",
+        "        print(x.shape)\n",
+        "        x = self.pool1(x)\n",
+        "        print(x.shape)\n",
+        "        x = x.permute(0, 2, 1) \n",
+        "        print(x.shape)\n",
+        "        x, _ = self.lstm(x)\n",
+        "        print(x.shape)\n",
+        "        x = x.flatten(1)\n",
+        "        print(x.shape)\n",
+        "        x = self.fc1(x)\n",
+        "        print(x.shape)\n",
+        "        x = self.fc2(x)\n",
+        "        print(x.shape)\n",
         "        return x"
       ]
     },
@@ -341,69 +367,114 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "ENKk0h2VQZiR"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "torch.Size([211238, 16, 4])\n",
-            "torch.Size([211238, 16, 2])\n",
-            "torch.Size([211238, 2, 16])\n",
-            "torch.Size([211238, 2, 128])\n",
-            "torch.Size([211238, 256])\n",
-            "torch.Size([211238, 128])\n",
-            "torch.Size([211238, 2])\n",
-            "Epoch [1/1], Loss: 0.7378100156784058\n",
-            "torch.Size([26404, 16, 4])\n",
-            "torch.Size([26404, 16, 2])\n",
-            "torch.Size([26404, 2, 16])\n",
-            "torch.Size([26404, 2, 128])\n",
-            "torch.Size([26404, 256])\n",
-            "torch.Size([26404, 128])\n",
-            "torch.Size([26404, 2])\n",
-            "Accuracy: 97.91319497045902%\n"
+          "ename": "NameError",
+          "evalue": "name 'X_train' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[8], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[0;32m     13\u001b[0m     GRU_model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m---> 14\u001b[0m     X_train \u001b[38;5;241m=\u001b[39m \u001b[43mX_train\u001b[49m\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m     15\u001b[0m     Y_train \u001b[38;5;241m=\u001b[39m Y_train\u001b[38;5;241m.\u001b[39mlong()\n\u001b[0;32m     16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m GRU_model(X_train\u001b[38;5;241m.\u001b[39mto(device))\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
           ]
         }
       ],
       "source": [
-        "model = Net().to(device)\n",
+        "GRU_model = GRU().to(device)\n",
         "\n",
         "# Loss and optimizer\n",
         "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer = th.optim.Adam(model.parameters(), lr=0.001)\n",
+        "optimizer = th.optim.Adam(GRU_model.parameters(), lr=0.001)\n",
         "\n",
         "# Training the model\n",
-        "num_epochs = 10\n",
+        "num_epochs = 1\n",
+        "\n",
+        "#Store the loss values\n",
+        "train_losses_GRU, val_losses_GRU = [], []\n",
         "for epoch in range(num_epochs):\n",
-        "    model.train()\n",
+        "    GRU_model.train()\n",
         "    X_train = X_train.float()\n",
         "    Y_train = Y_train.long()\n",
-        "    outputs = model(X_train.to(device))\n",
+        "    outputs = GRU_model(X_train.to(device))\n",
         "    loss = criterion(outputs, Y_train.to(device))\n",
+        "    train_losses_GRU.append(loss.item())\n",
         "\n",
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
-        "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item()}')\n",
+        "    #Validation\n",
+        "    GRU_model.eval()\n",
+        "    with th.no_grad():\n",
+        "        X_val = X_val.float()\n",
+        "        Y_val = Y_val.long()\n",
+        "        val_outputs = GRU_model(X_val.to(device))\n",
+        "        val_loss = criterion(val_outputs, Y_val.to(device))\n",
+        "        val_losses_GRU.append(loss.item())\n",
         "\n",
-        "# Testing the model\n",
-        "model.eval()\n",
-        "with th.no_grad():\n",
-        "    correct = 0\n",
-        "    total = 0\n",
-        "    X_test = X_test.float()\n",
-        "    Y_test = Y_test.long()\n",
-        "    outputs = model(X_test.to(device))\n",
-        "    _, predicted = th.max(outputs.data, 1)\n",
-        "    total += Y_test.size(0)\n",
-        "    correct += (predicted == Y_test.to(device)).sum().item()\n",
+        "    print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {loss.item():.4f}, Val Loss: {val_loss.item():.4f}')\n",
         "\n",
-        "    print(f'Accuracy: {100 * correct / total}%')"
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'X_train' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[7], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[0;32m     13\u001b[0m     LSTM_model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m---> 14\u001b[0m     X_train \u001b[38;5;241m=\u001b[39m \u001b[43mX_train\u001b[49m\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m     15\u001b[0m     Y_train \u001b[38;5;241m=\u001b[39m Y_train\u001b[38;5;241m.\u001b[39mlong()\n\u001b[0;32m     16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m LSTM_model(X_train\u001b[38;5;241m.\u001b[39mto(device))\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "LSTM_model = LSTM().to(device)\n",
+        "\n",
+        "# Loss and optimizer\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = th.optim.Adam(LSTM_model.parameters(), lr=0.001)\n",
+        "\n",
+        "# Training the model\n",
+        "num_epochs = 1\n",
+        "\n",
+        "#Store the loss values\n",
+        "train_losses_LSTM, val_losses_LSTM = [], []\n",
+        "for epoch in range(num_epochs):\n",
+        "    LSTM_model.train()\n",
+        "    X_train = X_train.float()\n",
+        "    Y_train = Y_train.long()\n",
+        "    outputs = LSTM_model(X_train.to(device))\n",
+        "    loss = criterion(outputs, Y_train.to(device))\n",
+        "    train_losses_LSTM.append(loss.item())\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    #Validation\n",
+        "    LSTM_model.eval()\n",
+        "    with th.no_grad():\n",
+        "        X_val = X_val.float()\n",
+        "        Y_val = Y_val.long()\n",
+        "        val_outputs = LSTM_model(X_val.to(device))\n",
+        "        val_loss = criterion(val_outputs, Y_val.to(device))\n",
+        "        val_losses_LSTM.append(loss.item())\n",
+        "\n",
+        "    print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {loss.item():.4f}, Val Loss: {val_loss.item():.4f}')\n",
+        "\n",
+        "    "
       ]
     }
   ],
